<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.Login">
    <TextView
            android:id="@+id/login_title"
            android:text="@string/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"/>
    <EditText
            android:id="@+id/login_user_name"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/login_user_name"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/login_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/login_password"
            android:hint="@string/login_user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/login_user_name"/>
    <CheckBox
            android:id="@+id/login_save"
            android:text="@string/login_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            android:layout_marginStart="8dp"/>
    <Button
            android:id="@+id/btn_login"
            android:text="@string/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_save"
            android:layout_marginTop="16dp"/>
</android.support.constraint.ConstraintLayout>