<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity"
    style="@style/ConstraintLayout">

    <TextView
            android:id="@+id/login_title"
            android:text="@string/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/AdapterTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="10dp"/>
    <EditText
            android:id="@+id/login_user_name"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="@string/login_user_name"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/login_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <EditText
            android:id="@+id/login_password"
            android:hint="@string/login_user_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/login_user_name"/>

    <Button
            android:id="@+id/btn_login"
            android:text="@string/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_password"
            android:layout_marginTop="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>